proj1/tests/other-tests/oskis-angels_tests/error/int.py
print 08
print 09
print 0x
print 0X
print 0X
print 0xg
print 0Xg
print 0xh
print 0Xh
print 0xi
print 0Xi
print 0xj
print 0Xj
print 0xk
print 0Xk
print 0xl
print 0Xl
print 0xm
print 0Xm
print 0xn
print 0Xn
print 0xo
print 0Xo
print 0xp
print 0Xp
print 0xq
print 0Xq
print 0xr
print 0Xr
print 0xs
print 0Xs
print 0xt
print 0Xt
print 0xu
print 0Xu
print 0xv
print 0Xv
print 0xw
print 0Xw
print 0xx
print 0Xx
print 0xy
print 0Xy
print 0xz
print 0Xz
print 0xG
print 0XG
print 0xH
print 0XH
print 0xI
print 0XI
print 0xJ
print 0XJ
print 0xK
print 0XK
print 0xL
print 0XL
print 0xM
print 0XM
print 0xN
print 0XN
print 0xO
print 0XO
print 0xP
print 0XP
print 0xQ
print 0XQ
print 0xR
print 0XR
print 0xS
print 0XS
print 0xT
print 0XT
print 0xU
print 0XU
print 0xV
print 0XV
print 0xW
print 0XW
print 0xX
print 0XX
print 0xY
print 0XY
print 0xZ
print 0XZ
